// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`liquid tokenizer syntax conditions-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Person is: ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% if personType == 'cool' %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% if personType == 'cool' %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " cool ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% else %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% else %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " not cool.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax conditions-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%if var == \\"a\\"%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%if var == \\"a\\"%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " A ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%else%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%else%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " B was the point we examined. Now examine let's examine others.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax conditions-3 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% if var == \\"a\\" %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% if var == \\"a\\" %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "

",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "hardbreak",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Content when var is equal a

",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% else %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% else %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "

",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "hardbreak",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Content when var is not equal a

",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% endif %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% endif %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "

",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "hardbreak",
  },
]
`;

exports[`liquid tokenizer syntax filter-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Hello P",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.name | capitalize}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.name | capitalize}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Filter",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "!",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax filter-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "We have ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.name | length}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.name | length}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Filter",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " users.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax filter-3 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Users amount: ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{ user.name | length }}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{ user.name | length }}",
    "meta": null,
    "nesting": 0,
    "subtype": "Filter",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax filter-4 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Users amount: ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{ user_name-cool | length }}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{ user_name-cool | length }}",
    "meta": null,
    "nesting": 0,
    "subtype": "Filter",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax functions-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Hello P",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{ user.name.slice(1, 2) }}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{ user.name.slice(1, 2) }}",
    "meta": null,
    "nesting": 0,
    "subtype": "Function",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "vel!",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax functions-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Sentence ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.name.slice(1)}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.name.slice(1)}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Function",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " content after.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax functions-3 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.slice(1)}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.slice(1)}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Function",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax functions-4 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user_name-cool.slice(1)}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user_name-cool.slice(1)}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Function",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax loop-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% for x in xs %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% for x in xs %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " x ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{% endfor %}",
    "meta": null,
    "nesting": 0,
    "skip": "{% endfor %}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
]
`;

exports[`liquid tokenizer syntax loop-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%for x in xs%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%for x in xs%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " x ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%endfor%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%endfor%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
]
`;

exports[`liquid tokenizer syntax loop-3 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%for x.a_b in xs.ys%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%for x.a_b in xs.ys%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " x ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%endfor%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%endfor%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
]
`;

exports[`liquid tokenizer syntax loop-4 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%for x.a_b in xs.ys%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%for x.a_b in xs.ys%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "

",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "hardbreak",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{a_b.c}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{a_b.c}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Variable",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "

",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "hardbreak",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{%endfor%}",
    "meta": null,
    "nesting": 0,
    "skip": "{%endfor%}",
    "subtype": "Literal",
    "tag": "",
    "type": "liquid",
  },
]
`;

exports[`liquid tokenizer syntax text-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Sentence with plain text. Another plain text sentence.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax text-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Sentence.    Sentence after 4 spaces.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax variable-1 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Hello ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.name}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.name}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Variable",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "!",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax variable-2 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "We have ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{ user.name }}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{ user.name }}",
    "meta": null,
    "nesting": 0,
    "subtype": "Variable",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": " users.",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax variable-3 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Users amount: ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user.name}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user.name}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Variable",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;

exports[`liquid tokenizer syntax variable-4 1`] = `
Array [
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "Users amount: ",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "{{user_name-cool}}",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "{{user_name-cool}}",
    "meta": null,
    "nesting": 0,
    "subtype": "Variable",
    "tag": "",
    "type": "liquid",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": ".",
    "generated": "liquid",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "text",
  },
]
`;
